<resources>
    <string name="app_name">Imagine</string>
    <string name="login">Log In</string>
    <string name="Name">Name</string>
    <string name="email">email</string>
    <string name="Username">Username</string>
    <string name="password">password</string>
    <string name="noAccount">Don\'t have an account? Register here</string>
    <string name="Register">Register</string>
    <string name="haveAccount">Have an account? Log In</string>
    <string name="RegistrationSuccess">Registration Successful, please Log In</string>
    <string name="checkInput">Check your inputs</string>
    <string name="Submit">Submit</string>
    <string name="loginSuccess">Login successful</string>
    <string name="loginError">Login Error</string>
    <string name="repeat_password">repeat password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="registerError">Register Error</string>
    <string name="imagine">imagine</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="uploaded_images">Uploaded images</string>
    <string name="log_out">LOG OUT</string>
    <string name="uploading">Uploading...</string>
    <string name="rgb">RGB</string>
</resources>
