<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:background="@color/botticelli_blue_CDD">
    <TextView
        android:id="@+id/tvTitleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagine"
        android:textSize="56sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:fontFamily="@font/beth_allen_regular"
        android:gravity="center"
        android:layout_marginTop="80dp"/>
    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginTop="30dp"
        style="@style/input_tundra_nunito_20"/>
    <EditText
        android:id="@+id/etPasswordLogin"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginTop="48dp"
        style="@style/input_tundra_nunito_20"/>
    <Button
        android:id="@+id/buttonLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="66dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/gallery_white_EBE"
        android:textStyle="bold"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/linkRegister"
        android:text="@string/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/cloud_burst_blue_1C2"
        android:layout_marginTop="22dp" />
</LinearLayout>
